force-app/main/default/objects/Sales_Organization_Material__c/Sales_Organization_Material__c.object-meta.xml
<CustomObject>
    <label>Sales Organization Material</label>
    <nameField>
        <label>Sales Organization Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organization Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>