force-app/main/default/objects/Sales_Organization_Material__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <formula>OR( 
 ISPICKVAL(DChain__c, &quot;03&quot;), 
 ISPICKVAL(DChain__c, &quot;14&quot;), 
 ISPICKVAL(DChain__c, &quot;25&quot;),
 ISPICKVAL(DChain__c, &quot;27&quot;), 
 ISPICKVAL(DChain__c, &quot;99&quot;), 
 ISPICKVAL(DChain__c, &quot;G2&quot;), 
 ISPICKVAL(DChain__c, &quot;G3&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block</label>
    <type>Checkbox</type>
</CustomField>