force-app/main/default/objects/Sales_Organization_Material__c/fields/DChain__c.field-meta.xml
<CustomField>
    <fullName>DChain__c</fullName>
    <inlineHelpText>The distribution-chain-specific material status restricts the usability of the material for the distribution chain concerned, that is, it defines whether a warning or error message is displayed if you include the material in a particular function.</inlineHelpText>
    <label>DChain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03 - Technical Defect</fullName>
            </value>
            <value>
                <fullName>14 - Invalid Number</fullName>
            </value>
            <value>
                <fullName>25 - Sales Price Required</fullName>
            </value>
            <value>
                <fullName>27 - Pattern Expired</fullName>
            </value>
            <value>
                <fullName>99 - Comp. Sales Block</fullName>
            </value>
            <value>
                <fullName>G2 - Obsolete</fullName>
            </value>
            <value>
                <fullName>G3 - Superseded</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>