force-app/main/default/objects/Sales_Organization_Material__c/fields/Deletion__c.field-meta.xml
<CustomField>
    <fullName>Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion</label>
    <type>Checkbox</type>
</CustomField>