force-app/main/default/objects/Sales_Organization_Material__c/fields/ERP_ID_SO__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID_SO__c</fullName>
    <description>ERP_ID_SO</description>
    <externalId>true</externalId>
    <label>ERP_ID_SO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>