force-app/main/default/objects/Sales_Organization_Material__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Material Number</label>
    <referenceTo>Material_Number__c</referenceTo>
    <relationshipLabel>Sales Organization Materials</relationshipLabel>
    <relationshipName>Sales_Organization_Materials</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>