force-app/main/default/objects/Sales_Organization_Material__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <referenceTo>Sales_Organization__c</referenceTo>
    <relationshipLabel>Sales Organization Materials</relationshipLabel>
    <relationshipName>Sales_Organization_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>