force-app/main/default/objects/Sales_Organization_Material__c/fields/Unique_Key_Lenght__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_Lenght__c</fullName>
    <formula>LEN( Unique_SalesOrg_Material_Key__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key Lenght</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>