force-app/main/default/objects/Sales_Organization_Material__c/listViews/Sales_Organization_Materials.listView-meta.xml
<ListView>
    <fullName>Sales_Organization_Materials</fullName>
    <columns>NAME</columns>
    <columns>Material_Number__c</columns>
    <columns>Sales_Organization__c</columns>
    <columns>ERP_ID_SO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>GB01</value>
    </filters>
    <label>Sales Organization Materials</label>
</ListView>